force-app/main/default/objects/Voucher__c/fields/Builder_Sponsor_Amount__c.field-meta.xml
<CustomField>
    <fullName>Builder_Sponsor_Amount__c</fullName>
    <label>Builder / Sponsor Amount</label>
    <description>Amount Lennar or the builder sponsor funds or reimburses. Equal to Voucher_Face_Value__c in standard scenarios. Preserved separately from customer invoice amount for builder billing/reimbursement reporting.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>