force-app/main/default/objects/Voucher__c/fields/Customer_Paid_Upgrade_Amount__c.field-meta.xml
<CustomField>
    <fullName>Customer_Paid_Upgrade_Amount__c</fullName>
    <label>Customer Paid Upgrade Amount</label>
    <description>Amount the customer pays above the Standard Grilling Island voucher value. Zero if Standard selected. Deluxe price minus Standard price if Deluxe selected. Voucher does not cover this amount.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>