force-app/main/default/objects/Voucher__c/fields/Gross_Grill_Price__c.field-meta.xml
<CustomField>
    <fullName>Gross_Grill_Price__c</fullName>
    <label>Gross Grill Price</label>
    <description>Full list price of the grilling island product selected by the homeowner (Standard or Deluxe). Populated from the quote line when voucher is applied to quote.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>