force-app/main/default/objects/Voucher__c/fields/Normalized_Address_Key__c.field-meta.xml
<CustomField>
    <fullName>Normalized_Address_Key__c</fullName>
    <label>Normalized Address Key</label>
    <description>Lowercased, trimmed, punctuation-stripped composite of street number + street name + zip code. Used for duplicate voucher detection when Lot__c and Homeowner_Property__c are not available. Auto-populated by flow at claim time. Do not edit manually.</description>
    <type>Text</type>
    <length>255</length>
</CustomField>