force-app/main/default/objects/Voucher__c/fields/Voucher_Face_Value__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Face_Value__c</fullName>
    <label>Voucher Face Value</label>
    <description>The Standard Grilling Island value this voucher covers. This is the cap — voucher never covers more than this amount regardless of product selected. Set from pricebook at time of issuance.</description>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>